--- a/hello/templates/hello/feminino.html
+++ b/hello/templates/hello/feminino.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Roupa feminina</title>
-    </head>
-    <body>
-        <!-- <strong>Hello there, {{ name }}!</strong> It's {{ date | date:"l, d F, Y" }} at {{ date | time:"H:i:s" }} -->
-        <strong>Olá cliente!</strong> Abaixo segue a listagem de roupas femininas
-    </body>
-</html>
+{% extends "hello/layout.html" %}
+{% block title %}
+<title>Roupa feminina</title>
+{% endblock %}
+{% block content %}
+<strong>Olá cliente!</strong> Abaixo segue a listagem de roupas femininas
+{% endblock %}
